{
    "name": "TankControls",
    "maps": [
        {
            "name": "Tank",
            "id": "facc7d1c-4ab8-4ece-9149-5ccf466f7527",
            "actions": [
                {
                    "name": "TankMove",
                    "type": "Value",
                    "id": "635d034a-6886-4e24-8592-ae4362702998",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TankBarrel",
                    "type": "Value",
                    "id": "3f593670-486b-4ae4-aef5-493fa7ab5b20",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a7bc4bd-c542-4727-bfac-a5242d228fb7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TankMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2291b8a2-27ca-4f9c-85cc-e5c53c7fc594",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TankMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a6047ab4-90f5-47c2-a65c-54b728c5c1df",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TankMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "22b6761f-7fa6-4f45-b07e-fb045f18c22b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TankMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "816b0bbe-b12c-47a1-84c4-fd19b0d34c3a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TankMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "084529be-fc60-43d6-a772-11a5d398e906",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TankMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "34f93d37-5866-40cc-a8f0-14b93aa1c6d2",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TankBarrel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}